<resources>
    <string name="app_name">Seva Satva</string>

    <string name="splash_text_seva">Seva</string>
    <string name="splash_text_satva">Satva</string>
    <string name="splash_text_slash">/</string>

    <string name="confirmation_dialog_temp_heading_text">Confirm</string>
    <string name="confirmation_dialog_temp_info_text">You won\'t be able to change your course again!</string>
    <string name="confirmation_dialog_temp_course_text">Selected course:</string>
    <string name="confirmation_dialog_temp_course_code_text">SV10</string>
    <string name="confirmation_dialog_temp_yes_text">Yes</string>
    <string name="confirmation_dialog_temp_no_text">No</string>

    <string name="redirecting_dialog_temp_heading_text">Redirecting…</string>
    <string name="redirecting_dialog_temp_info_text">Unable to connect to internet</string>

    <string name="app_intro_st_heading">As a Student</string>
    <string name="app_intro_mt_heading">As a Mentor</string>
    <string name="app_intro_st_desc">Gain information through news related to your course, appear for tests, get your doubts cleared by your mentor through our exclusive chat room &amp; much more…</string>
    <string name="app_intro_mt_desc">Make important announcements, create tests and grade them, interact with students and clear their doubts, get entire students\' data &amp; much more…</string>
    <string name="app_intro_next_text">Next</string>
    <string name="app_intro_back_text">Back</string>
    <string name="app_intro_continue_text">Continue</string>
    <string name="app_intro_role_text">Select your role</string>
    <string name="app_intro_role_student">Student</string>
    <string name="app_intro_role_mentor">Mentor</string>

    <string name="login_name_text">Name</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_text">Log in</string>
    <string name="login_forgot_pass_text">Forgot password?</string>
    <string name="login_student_login_message">Please wait, Signing you in…</string>
    <string name="login_mentor_login_text">Mentor log in</string>
    <string name="login_mentor_question">Unable to login?</string>
    <string name="login_contact_us_text">Contact us</string>

    <string name="student_details_heading">Select course</string>
    <string name="student_details_search">Search</string>
    <string name="student_details_select_text">Select</string>
    <string name="student_details_temp_cc_text">SV12</string>
    <string name="student_details_temp_cn_text">India\'s top 2 problems</string>
    <string name="student_details_temp_desc_text">Lorem Ipsum</string>
    <string name="student_details_mentor_text">Mentor:</string>
    <string name="student_details_temp_mentor_name_text">Not allocated yet</string>

    <string name="home_heading">Seva Satva</string>
    <string name="home_greeting">Hi,</string>
    <string name="home_greeting_name">Akshay</string>
    <string name="home_tests_text">Upcoming tests</string>
    <string name="home_temp_tests_info_text">No test scheduled in this week.</string>
    <string name="home_lec_text">Lectures schedule</string>
    <string name="home_temp_lec_info_text">No lectures scheduled! Ask your mentor to schedule lectures to reflect changes in the app</string>
    <string name="home_page_adapter_ans_heading">Check</string>
    <string name="home_page_adapter_news_heading">Explore</string>
    <string name="home_page_adapter_doubts_heading">Ask</string>
    <string name="home_page_adapter_ans_title">Announcements</string>
    <string name="home_page_adapter_news_title">News Section</string>
    <string name="home_page_adapter_doubts_title">Doubts</string>
    <string name="home_page_adapter_ans_desc">Check for new announcements and attachments.</string>
    <string name="home_page_adapter_news_desc">Get latest news every day.</string>
    <string name="home_page_adapter_doubts_desc">Ask and discuss your doubts with mentor.</string>

    <string name="ans_heading">Announcements</string>
    <string name="ansTitle">Title</string>
    <string name="ansDesc">Description</string>
    <string name="ansAttach"><u>View attachments</u></string>
    <string name="mentor_home_ans_create_ans_text">Create Announcement</string>

    <string name="news_heading">News</string>

    <string name="tests_heading">Tests &amp; Grades</string>

    <string name="pro_heading">Profile</string>
    <string name="pro_student_name">Akshay Vhatkar</string>
    <string name="pro_student_email">akshay.vhatkar@spit.ac.in</string>
    <string name="pro_sem_text">Semester wise record</string>
    <string name="pro_theme_text">Set theme</string>
    <string name="pro_theme_light_text">Light</string>
    <string name="pro_theme_dark_text">Dark</string>
    <string name="pro_theme_system_text">System Default</string>
    <string name="pro_ask_text">Ask Mentor</string>
    <string name="pro_about_text">About Us</string>
    <string name="pro_feedback_text">Feedback</string>
    <string name="pro_share_text">Share</string>
    <string name="pro_logout_text">Log Out</string>

    <string name="chat_heading">Ask Mentor</string>
    <string name="chat_heading_mentor">Student Doubts</string>
    <string name="chat_date">07/06/2003</string>
    <string name="chat_name">Akshay Vhatkar</string>
    <string name="chat_msg">Good morning</string>
    <string name="chat_time">5:00 am</string>
    <string name="chat_today">Today</string>
    <string name="chat_you">You</string>

    <string name="loading_text">Loading…</string>

    <string name="about_us_heading">About Us</string>
    <string name="about_us_main_text">Through this app, we plan to build a strong technical bridge between the mentor and the student, so that the Seva/Satva course is carried out fluently and in a hassle-free manner.</string>
    <string name="about_us_ans_info_text">1. To achieve a Real-time system for Announcement declaration.</string>
    <string name="about_us_tests_info_text">2. A test platform to formally conduct SEVA/SATVA tests and exams.</string>
    <string name="about_us_course_info_text">3. Easy and user-friendly CRUD operations for the record of students enrolled in any particular course.</string>
    <string name="about_us_chat_info_text">4. Real-time Doubt section course exclusive for students and mentors</string>
    <string name="about_us_contact_us_text">In any case of query please feel free to contact us</string>
    <string name="about_us_contact_developer_text">If you are not satisfied with the resolution provided by us, then please write to our Developer at <u>akshay0706vhatkar@gmail.com</u></string>
    <string name="about_us_branding_text">©Powered By Team Seva/Satva</string>
    <string name="about_us_support_email"><u>support.official@sevasatva.in</u></string>

    <!--    String arrays-->
    <string-array name="Branches">
        <item>COMPS</item>
        <item>IT</item>
        <item>EXTC</item>
        <item>ETRX</item>
        <item>MCA</item>
    </string-array>

    <string-array name="Classes">
        <item>FE</item>
        <item>SE</item>
        <item>TE</item>
        <item>BE</item>
    </string-array>

    <!--    Error list-->
    <!--    100 series - Registration-->
    <string name="error_100">Please try again later…</string>
    <string name="error_101">Unable to login</string>
    <string name="error_102">Request timeout</string>
    <string name="error_103">Unauthorized</string>
    <!--    200 series - Connections-->
    <string name="error_200">Could not connect to internet</string>
    <string name="error_201">Check your internet connection and refresh this page</string>
    <!--    300 series - Permissions-->
    <string name="error_300">You don\'t have permission to access this content</string>
    <string name="error_301">File access permission denied</string>
    <string name="error_302">Camera permission denied</string>
    <!--    400 series - Files and media-->
    <string name="error_400">This type of media is not supported</string>
    <string name="error_401">No file chosen</string>
    <string name="error_404">File not found</string>
    <!--    500 series - Others-->
    <string name="error_500">Loading time out</string>
    <string name="error_501">Please choose SPIT email only!</string>

    <string name="hello_blank_fragment">Hello</string>
</resources>