<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash"
    android:background="?attr/bg">

    <ImageView
        android:id="@+id/confirmImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/xtra_app_icon" />

    <TextView
        android:id="@+id/splashTextSeva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/splash_text_seva"
        android:textColor="@color/sevaTextColor"
        android:textSize="24sp"
        android:alpha="0"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/splashTextSlash"
        app:layout_constraintEnd_toStartOf="@+id/splashTextSlash"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/splashTextSlash" />

    <TextView
        android:id="@+id/splashTextSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/splash_text_slash"
        android:textColor="@color/iconColor"
        android:textSize="24sp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmImage"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/splashTextSatva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/splash_text_satva"
        android:textColor="@color/satvaTextColor"
        android:textSize="24sp"
        android:alpha="0"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/splashTextSlash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/splashTextSlash"
        app:layout_constraintTop_toTopOf="@+id/splashTextSlash" />

</androidx.constraintlayout.widget.ConstraintLayout>